Committed the changes for API update 12-13-2025
